RJ-2024-010 fix equation overflow

--- a/_articles/RJ-2024-010/RJ-2024-010.Rmd
+++ b/_articles/RJ-2024-010/RJ-2024-010.Rmd
@@ -514,7 +514,14 @@ $\boldsymbol{\theta}^{\star}_b$ and $\boldsymbol{\theta}^{\star}$, we
 first transform $\gamma_1=\log\left(\frac{1}{\sigma^2_1}\right)$ and
 $\gamma_2=\log\left(\frac{1}{\sigma^2_2}\right)$ to stabilize the
 optimization. We optimize
-$\log P(\boldsymbol{Y}|g,\sigma^2_1,\sigma^2_2)^b\pi(\sigma^2_1,\sigma^2_2,g)=\frac{n_1b}{2}\log \gamma_1+\frac{n_2b}{2}\gamma_2-\frac{P}{2}\log g+\frac{1}{2}|X^T\tilde{\Sigma}X|-\frac{1}{2}\log|\frac{bg+1}{bg}X^T(\tilde{\Sigma}-Z_{\tilde{\Sigma}})X|-\frac{b}{2}\boldsymbol{Y}^T \left(\tilde{\Sigma}-Z_{\tilde{\Sigma}}-(\tilde{\Sigma}-Z_{\tilde{\Sigma}})X\left(\frac{bg+1}{bg}X^T\tilde{\Sigma}X-X^T Z_{\tilde{\Sigma}}X\right)^{-1}X^T(\tilde{\Sigma}-Z_{\tilde{\Sigma}}) \right) \boldsymbol{Y}-\frac{3}{2}\log(g)-\frac{N}{2g}+\log(J)$
+
+$$\begin{split}
+\log &P(\boldsymbol{Y}|g,\sigma^2_1,\sigma^2_2)^b\pi(\sigma^2_1,\sigma^2_2,g)=\frac{n_1b}{2}\log \gamma_1+\frac{n_2b}{2}\gamma_2-\frac{P}{2}\log g+\frac{1}{2}|X^T\tilde{\Sigma}X|-\\
+& \frac{1}{2}\log|\frac{bg+1}{bg}X^T(\tilde{\Sigma}-Z_{\tilde{\Sigma}})X|- \\
+& \frac{b}{2}\boldsymbol{Y}^T \left(\tilde{\Sigma}-Z_{\tilde{\Sigma}}-(\tilde{\Sigma}-Z_{\tilde{\Sigma}})X\left(\frac{bg+1}{bg}X^T\tilde{\Sigma}X-X^T Z_{\tilde{\Sigma}}X\right)^{-1}X^T(\tilde{\Sigma}-Z_{\tilde{\Sigma}}) \right) \boldsymbol{Y}-\\
+& \frac{3}{2}\log(g)-\frac{N}{2g}+\log(J)
+\end{split}$$
+
 using the Nelder-Mead method from **optim** where
 $Z_{\tilde{\Sigma}}=\tilde{\Sigma}Z(Z^T \tilde{\Sigma} Z)^{-1}Z^T \tilde{\Sigma}$,
 $Z=\boldsymbol{1}^T$, and $\log(J)=-(\gamma_1+\gamma_2)$ represents the
