RJ-2024-011 remove blue text

--- a/_articles/RJ-2024-011/RJ-2024-011.Rmd
+++ b/_articles/RJ-2024-011/RJ-2024-011.Rmd
@@ -155,7 +155,7 @@ of syllables making up the songs as well as the lengths of
 inter-syllable intervals (ISIs). The data set `foxp2` included in the
 **BMRMM** package is taken from the simulation study of
 [@wu2021bayesian]. It is much shorter than the real FoxP2 data set but
-closely mimics its other aspects and is used]{style="color: blue"} in
+closely mimics its other aspects and is used] in
 this paper to demonstrate how to obtain detailed inferences for both
 syllable transitions and ISI dynamics for a comprehensive analysis of
 the vocal repertoire in mice with and without the FoxP2 mutation.
@@ -215,7 +215,7 @@ Bayesian M(R)MMs.
 Documentation for the functions of the **BMRMM** package is then
 provided. Next, we demonstrate the usage of our package in analyzing two
 different data sets. The final section contains some concluding remarks.
-]{style="color: blue"}
+]
 
 ## The Bayesian Markov (renewal) mixed models {#sec:models}
 
@@ -276,7 +276,7 @@ $\boldsymbol\lambda_{trans,x_1=1,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ and
 $\boldsymbol\lambda_{trans,x_1=2,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ would be
 equal if levels 1 and 2 of covariate 1 have similar influences on
 transition dynamics for fixed levels for covariates
-$2, \dots, p$.]{style="color: blue"} A clustering mechanism for
+$2, \dots, p$.] A clustering mechanism for
 covariate levels allows the fixed component
 $\boldsymbol\lambda_{trans,x_1,\dots,x_p}(\cdot\mid y_{t-1})$ to be the same
 for all levels with a similar influence. In particular, for covariate
@@ -289,7 +289,7 @@ indicate the cluster index for the $\ell^{th}$ label of covariate $j$.
 [Two levels of the covariate $j$,
 $\ell_1, \ell_2 \in {\cal X}_j = \{1,\dots,d_j\}$, are clustered
 together if and only if
-$z_{trans,j,\ell_1} = z_{trans,j,\ell_2}$.]{style="color: blue"} For the
+$z_{trans,j,\ell_1} = z_{trans,j,\ell_2}$.] For the
 fixed effects, we then replace the covariate levels $x_1,\dots,x_p$'s
 with cluster indices $h_1,\dots,h_p$'s and present the fixed effect as
 $\boldsymbol\lambda_{trans,h_{1},\dots,h_{p}}(\cdot\mid y_{t-1})$.
@@ -410,7 +410,7 @@ Inference is based on samples drawn from the posterior using a
 [Metropolis-Hastings-within-Gibbs MCMC algorithm. Most full conditionals
 are available in closed form and can be directly sampled from. A
 Metropolis-Hastings step is however used for updating the discrete
-valued cluster configurations.]{style="color: blue"} There is, however,
+valued cluster configurations.] There is, however,
 no conjugate prior for gamma distributions with unknown shape parameters
 [@damsleth1975conjugate]. Recently, @miller2019fast designed a procedure
 that efficiently approximates the posterior full conditionals of gamma
@@ -428,7 +428,7 @@ out detailed analyses of the state transitions and their duration times
 package includes a number of supplementary functions that use the
 results of the main function to produce numerical summaries,
 visualizations, and diagnostics. Table \@ref(tab:fn) provides a brief
-description of all functions. ]{style="color: blue"}
+description of all functions. ]
 
 ::: {#tab:fn}
 ```{r fn, echo = FALSE, results = 'asis'}
@@ -453,7 +453,7 @@ BMRMM(data, num.cov, cov.labels = NULL, state.labels = NULL,
 ```
 
 [The parameter `data` specifies the target data set and needs to follow
-a certain structure. ]{style="color: blue"} The first column should list
+a certain structure. ] The first column should list
 the individual IDs $i_{s}$, followed by $p$ columns for the values of
 the $p$ associated covariates $x_{s,j}$, then two columns for the values
 of the previous state $y_{s,t-1}$, the current state $y_{s,t}$, and
@@ -462,7 +462,7 @@ one to five categorical covariates that take on values ${1,2,\dots}$.
 The duration times column is optional if the user would like to use BMMM
 instead of BMRMM to analyze just the state transitions. This is shown in
 Table [2](#tab:data-cols). The users can look at the included
-[simulated data set]{style="color: blue"} `foxp2` as an example.
+[simulated data set] `foxp2` as an example.
 
 ::: {#tab:data-cols}
   ---------------------------------------------------------------------------------------------------
@@ -479,33 +479,33 @@ Table [2](#tab:data-cols). The users can look at the included
 names of covariate levels in the covariate order that is presented in
 `data` while the parameter `state.labels` is a vector providing the
 names of the transition states. The default labels are Arabic numerals.
-]{style="color: blue"} The [`random.effect`]{style="color: blue"}
+] The [`random.effect`]
 parameter gives users the option to exclude the random individual
-effects. If [`random.effect`]{style="color: blue"} is set to `FALSE`,
+effects. If [`random.effect`] is set to `FALSE`,
 the transition probabilities (and the mixture probabilities for duration
 times, if applicable) will only consider the influence of the covariate
-levels. Similarly, the [`fixed.effect`]{style="color: blue"} parameter
+levels. Similarly, the [`fixed.effect`] parameter
 allows users to exclude the fixed population effects. [The default
 values for `random.effect` and `fixed.effect` are both
-`TRUE`.]{style="color: blue"} The covariate indices for the two analyses
+`TRUE`.] The covariate indices for the two analyses
 can be specified by setting `trans.cov.index` and `duration.cov.index`.
 [We note that indices specified by `trans.cov.index` and
 `duration.cov.index` refer to the index of the covariate when the first
 covariate is given index 1, thus different from its index in
-`data`.]{style="color: blue"}
+`data`.]
 
 [Users can define `duration.distr` in the following three
-ways.]{style="color: blue"}
+ways.]
 
 1.  [If users set `duration.distr` to be `NULL`, which is the default
     setting, then the duration times will be ignored and not modeled at
-    all. ]{style="color: blue"} The BMMM described will be implemented
+    all. ] The BMMM described will be implemented
     to analyze the existing state transitions alone.
 
 2.  [If `duration.distr` is set as `list(‘mixDirichlet’, unit)`, the
     duration times will be used to construct a new state `‘dur.state’`,
     which will be analyzed along with the original set of states.
-    ]{style="color: blue"} The additional argument `unit` must be
+    ] The additional argument `unit` must be
     defined and acts both as a threshold and as a block size for
     duration times. For example, if the `unit` is set to $5$, then for
     each duration value greater than $5$ units, each block of $5$ unit
@@ -515,7 +515,7 @@ ways.]{style="color: blue"}
     seconds, then the updated Markov sequence will contain three
     consecutive `‘dur.state’` states, i.e.,
     `(‘a’, ‘dur.state’, ‘dur.state’, ‘dur.state’, ‘b’)`.
-    ]{style="color: blue"} Since we adopt the floor operation, a
+    ] Since we adopt the floor operation, a
     duration time of say $17.68$ seconds will also be replaced by three
     consecutive instances of `’dur.state’` states in this example. The
     BMMM model will then be implemented to analyze the resulting
@@ -528,19 +528,19 @@ ways.]{style="color: blue"}
 3.  [If `duration.distr` is set to be `list(‘mixgamma’, shape, rate)`,
     the duration times are modeled as a continuous random variable using
     a flexible mixture of gamma kernels, as described for a BMRMM
-    model.]{style="color: blue"} In this case, users can specify the
+    model.] In this case, users can specify the
     prior shape and rate parameters with the `shape` and `rate`
     arguments within the definition of `duration.distr`. We note that
     `shape` and `rate` must be numeric vectors of the same length.
 
 By default, we consider the previous state $y_{s,t-1}$ as a covariate
 when we model the duration times as continuous variables, i.e.,
-[`duration.incl.prev.state`]{style="color: blue"} is set to `TRUE`.
+[`duration.incl.prev.state`] is set to `TRUE`.
 Users can set this parameter to `FALSE` if they wish to exclude the
 previous state when analyzing the duration times. [The remaining
 parameters `simsize` and `burnin` denote the total number of MCMC
 iterations and the number of burn-ins, respectively.
-]{style="color: blue"}
+]
 
 ::: {#tab:bmrmm}
   ----------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -550,13 +550,13 @@ iterations and the number of burn-ins, respectively.
 
   `num.cov`                                           an integer giving the number of observed covariates in `data`                
 
-  [`cov.labels`]{style="color: blue"}                 a list of vectors giving names of all covariate levels                       [`NULL`]{style="color: blue"}
+  [`cov.labels`]                 a list of vectors giving names of all covariate levels                       [`NULL`]
 
-  [`state.labels`]{style="color: blue"}               a vector giving names of the states                                          [`NULL`]{style="color: blue"}
+  [`state.labels`]               a vector giving names of the states                                          [`NULL`]
 
-  [`random.effect`]{style="color: blue"}              `TRUE` if random individual effects are included                             [`TRUE`]{style="color: blue"}
+  [`random.effect`]              `TRUE` if random individual effects are included                             [`TRUE`]
 
-  [`fixed.effect`]{style="color: blue"}               `TRUE` if fixed population effects are included                              [`TRUE`]{style="color: blue"}
+  [`fixed.effect`]               `TRUE` if fixed population effects are included                              [`TRUE`]
 
   `trans.cov.index`                                   selects the covariates to analyze for transition probabilities               `1:num.cov`
 
@@ -564,7 +564,7 @@ iterations and the number of burn-ins, respectively.
 
   `duration.distr`                                    specifies the distribution for duration times                                `NULL`
 
-  [`duration.incl.prev.state`]{style="color: blue"}   `TRUE` if $y_{t-1}$ acts as a covariate for the analysis of duration times   [`TRUE`]{style="color: blue"}
+  [`duration.incl.prev.state`]   `TRUE` if $y_{t-1}$ acts as a covariate for the analysis of duration times   [`TRUE`]
 
   `simsize`                                           number of MCMC iterations                                                    10000
 
@@ -577,7 +577,7 @@ iterations and the number of burn-ins, respectively.
 The `BMRMM` function returns [an object of class `BMRMM`, which either
 contains only `results.trans` or both of `results.trans` and
 `results.duration` if duration times follow a mixture gamma
-distribution.]{style="color: blue"} For the state transitions, the
+distribution.] For the state transitions, the
 posterior mean transition probability matrices for each combination of
 the covariate levels and each individual are given by
 `results.trans$tp.exgns.post.mean` and
@@ -593,10 +593,10 @@ transition probabilities, `results.duration$clusters` gives the cluster
 configurations of the covariates. Other elements of `results.trans` and
 `results.duration` can be found in the detailed R function description.
 
-### [Summarizing BMRMM results]{style="color: blue"}
+### [Summarizing BMRMM results]
 
 [The **BMRMM** package provides an S3 method for summarizing results of
-a `BMRMM` object as follows. ]{style="color: blue"}
+a `BMRMM` object as follows. ]
 
 ``` r
 summary.BMRMM(object, delta = 0.02, digits = 2, ...)
@@ -607,14 +607,14 @@ associated with local tests for transition probabilities, which we will
 explain further. The `digit` parameter is an integer used for number
 formatting, as in the general `summary` function. The `summary.BMRMM`
 function returns an object of class `BMRMMsummary` with the following
-fields. ]{style="color: blue"}
+fields. ]
 
 -   `trans.global` and `dur.global`
 
     [These two fields give the global test results from the inference of
     transition probabilities and duration times. Global tests show the
     significance of the covariates in affecting the state transitions
-    and duration times. ]{style="color: blue"} Specifically, for each
+    and duration times. ] Specifically, for each
     covariate, the empirical distribution of the size of the clusters in
     the stored MCMC iterations is calculated. The null hypothesis that a
     covariate is not important is equivalent to the event that all its
@@ -633,7 +633,7 @@ fields. ]{style="color: blue"}
     transition probabilities. Local tests analyze the differences
     between the transition probabilities associated with two different
     levels of a covariate $j$, fixing the levels of the other
-    covariates.]{style="color: blue"} For every pair of levels of
+    covariates.] For every pair of levels of
     covariate $j$, `trans.local.mean.diff` gives the absolute
     differences in transition probabilities for each transition type in
     the MCMC iterations. The local null hypothesis we test for each
@@ -641,7 +641,7 @@ fields. ]{style="color: blue"}
     pre-specified value `delta`. [Meanwhile, `trans.local.null.test`
     gives the probability of the null hypothesis that the difference
     between two covariate levels is not significant under each
-    transition type. ]{style="color: blue"}
+    transition type. ]
 
 -   `dur.mix.params` and `dur.mix.probs`
 
@@ -651,7 +651,7 @@ fields. ]{style="color: blue"}
     probabilities by calling the field `dur.mix.probs`, which can be
     further used to estimate the length of the duration times.
 
-### [Visualizing results with BMRMM plotting functions]{style="color: blue"}
+### [Visualizing results with BMRMM plotting functions]
 
 [The main plotting function of the package, `plot.BMRMMsummary`, is an
 S3 method for class `BMRMMsummary`. It gives the barplots for global
@@ -661,7 +661,7 @@ mixture parameters and probabilities for duration times. The parameters
 of `plot.BMRMMsummary` include `x`, which must be an object of class
 `BMRMMsummary` and `type`, which is a single string representing the
 field of `x` that needs to be plotted. The function also takes general
-plotting arguments such as `xlab`, `ylab`, etc. ]{style="color: blue"}
+plotting arguments such as `xlab`, `ylab`, etc. ]
 
 ``` r
 plot.BMRMMsummary(x, type, xlab = NULL, ylab = NULL, main = NULL, col = NULL, ...)
@@ -681,7 +681,7 @@ component `comp` will be presented alongside the mixture gamma
 distribution with the shape and rate parameters from the last MCMC
 iteration. Users can refer to the documentation of the general `hist`
 function to see the interpretation for the rest of the parameters.
-]{style="color: blue"}
+]
 
 ``` r
 hist.BMRMM(x, comp = NULL, xlim = NULL, breaks = NULL, main = NULL, 
@@ -696,13 +696,13 @@ state transitions they are interested in by defining `cov.combs` and
 `transitions`, respectively. For duration times, users can define
 `components`, a numeric vector, to obtain the diagnostic plots for shape
 and rate parameters of the specific component
-kernels.]{style="color: blue"}
+kernels.]
 
 ``` r
 diag.BMRMM(object, cov.combs = NULL, transitions = NULL, components = NULL) 
 ```
 
-### [Model selection scores for continuous duration times]{style="color: blue"}
+### [Model selection scores for continuous duration times]
 
 When the duration times are modeled using mixtures of gamma
 distributions, model selection can be performed on the number of mixture
@@ -713,7 +713,7 @@ model.selection.scores(object)
 ```
 
 [The function takes an `object` as its input, which must be an object of
-class `BMRMM`. It returns a list consisting of]{style="color: blue"} the
+class `BMRMM`. It returns a list consisting of] the
 log pseudo marginal likelihood (LPML) [@geisser1979predictive] and the
 widely applicable information criterion (WAIC) [@watanabe2010asymptotic]
 scores of the model. Larger values of LPML and smaller values of WAIC
@@ -738,7 +738,7 @@ gene on human vocal communication abilities and related deficiencies.
 simulated a data set that closely mimics the real one. For demonstrating
 the **BMRMM** package, we included in it a shortened version of this
 synthetic data set which we refer to as the `foxp2` data set.
-]{style="color: blue"} The `foxp2` synthetic data set has $17391$ rows
+] The `foxp2` synthetic data set has $17391$ rows
 and $6$ columns, which are Id, Genotype, Context, Prev_State, Cur_State,
 and Transformed_ISI. The original FoxP2 data set records ISIs in
 seconds. In the simulated data set `foxp2`, following @wu2021bayesian,
@@ -818,7 +818,7 @@ test results for identifying the significant covariates can be found by
 calling the fields `trans.global` and `dur.global`. The function
 `plot.BMRMMsummary` is called to visualize the global tests using
 barplots, as presented in Figure \@ref(fig:figglobal).
-]{style="color: blue"} We recall that a covariate is significant when
+] We recall that a covariate is significant when
 its levels formed more than one cluster with very high posterior
 probability (the bar heights). Figure \@ref(fig:figglobal) and the
 printed results suggest that every covariate is significant for the ISIs
@@ -848,7 +848,7 @@ knitr::include_graphics(c("figs/global_trans_foxp2.png", "figs/global_isi_foxp2.
 
 [The plotting function can be called to visualize the posterior
 transition probabilities under different combinations of the covariate
-levels. ]{style="color: blue"} We show in Figure \@ref(fig:figpost-mean)
+levels. ] We show in Figure \@ref(fig:figpost-mean)
 the heatmaps for the posterior mean and standard deviation of the
 transition probabilities for each transition type for the following
 combinations of covariates: $(F,A)$ and $(W,L)$.
@@ -877,7 +877,7 @@ results if we set the `type` to be `‘trans.local.mean.diff’` or
 `‘trans.local.null.test’`. Here, we show the results of local tests for
 the covariate 1 (i.e., genotype) with `delta` equaling the default value
 of 0.02, and present the plots in
-Figure \@ref(fig:figlocal).]{style="color: blue"} From the figure, we
+Figure \@ref(fig:figlocal).] From the figure, we
 see that the posterior probabilities of the null hypotheses are
 generally large for most transition types (e.g., transitions to the
 syllable $u$) regardless of the social context, indicating that genotype
@@ -993,7 +993,7 @@ duration times.
 
 [The `asthma` data set we use here is from the **SemiMarkov** package
 [@listwon2015semimarkov]. We have renamed and reordered the columns such
-that the data set fits the required format.]{style="color: blue"}
+that the data set fits the required format.]
 Specifically, the data set has $928$ rows, recording the asthma control
 states of $371$ patients, which is one of the following three transient
 states: Optimal control (State 1), sub-optimal control (State 2), and
@@ -1190,9 +1190,9 @@ the package in the future. [Future improvements to the package may
 include more options for the distribution types of transition
 probabilities and duration times beyond the currently available mixture
 Dirichlet and mixture gamma distributions,
-respectively.]{style="color: blue"}
+respectively.]
 
-::: {style="color: blue"}
+::: 
 ## Acknowledgements {#sec:ack}
 
 We thank two anonymous reviewers very much for their careful review of
